# inplace-box

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: impl_fn_traits.rs  impl_new.rs  lib.rs
tests/: test_inplace_box.rs  test_inplace_box_new.rs
